table timing added and updated
